commetned out some html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
     </nav>
     <!-- <button id="color-button">Grab the color</button> -->
-    <div id="circle-container">
+    <!-- <div id="circle-container">
       <div class="color-containers">
         <div class="circle"></div>
         <p class="tooltip">Copy HEX</p>
@@ -76,6 +76,6 @@
         <div class="circle"></div>
         <p class="tooltip">Copy HEX</p>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
